<resources>
    <string name="app_name">RicaMAPS</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoibHVjaWFubHV0YXMiLCJhIjoiY2oybmp2enNvMDAzOTJxcWtlb3Rnem1raCJ9.SPYOA-LW7SyjLRH1utNweg</string>
    <string name="add_end">Add End</string>
    <string name="add_start">Add Start</string>
    <string name="start_navigation">Start navigation</string>
    <string name="duration">Duration:</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="select_time">Select Time</string>
    <string name="button">Button</string>
</resources>